WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198369
[GTK] Fix memory leak introduced in
r245807
https://bugs.webkit.org/show_bug.cgi?id=198369
Summary
[GTK] Fix memory leak introduced in r245807
Carlos Garcia Campos
Reported
2019-05-30 03:38:35 PDT
We should destroy the wpe_view_backend_exportable_fdo created in AcceleratedBackingStoreWayland
Attachments
Patch
(1.39 KB, patch)
2019-05-30 03:40 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
Archive of layout-test-results from ews211 for win-future
(14.00 MB, application/zip)
2019-05-30 07:37 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-05-30 03:40:04 PDT
Created
attachment 370934
[details]
Patch
EWS Watchlist
Comment 2
2019-05-30 07:37:41 PDT
Comment on
attachment 370934
[details]
Patch
Attachment 370934
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12327583
New failing tests: css3/filters/blur-various-radii.html
EWS Watchlist
Comment 3
2019-05-30 07:37:44 PDT
Created
attachment 370941
[details]
Archive of layout-test-results from ews211 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews211 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Carlos Garcia Campos
Comment 4
2019-05-31 01:14:02 PDT
Committed
r245955
: <
https://trac.webkit.org/changeset/245955
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug