[GTK] Fix memory leak introduced in r245807 https://bugs.webkit.org/show_bug.cgi?id=198369

Reviewed by Michael Catanzaro.

We should destroy the wpe_view_backend_exportable_fdo created in AcceleratedBackingStoreWayland.

* UIProcess/gtk/AcceleratedBackingStoreWayland.cpp:
(WebKit::AcceleratedBackingStoreWayland::~AcceleratedBackingStoreWayland):

Canonical link: https://commits.webkit.org/212432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245955 268f45cc-cd09-0410-ab3c-d52691b4dbfc